added radio button and improved thread handling

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -15,5 +15,6 @@
     <string name="acct_create">Create Account</string>
     <string name="head_desc">Abunda Header</string>
     <string name="button_add">Add</string>
+    <string name="autoadd_radio">Add All Items</string>
 
 </resources>
