--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -16,5 +16,6 @@
     <string name="head_desc">Abunda Header</string>
     <string name="button_add">Add</string>
     <string name="autoadd_radio">Add All Items</string>
+    <string name="check_remember">Remember Me</string>
 
 </resources>
